[tool.poetry]
name = "blog"
version = "0.0.1"
description = ""
authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

